Fix hero wrapper on mobile

--- a/content/style.css
+++ b/content/style.css
@@ -942,7 +942,7 @@ textarea.w-select {
 	}
 
 	.h-hero-header-highlight {
-		height: 11em;
+		height: 11em!important;
 		overflow: hidden;
 	}
 }
@@ -3721,7 +3721,7 @@ body.dark-theme .btn-link-underline-hover {
 		grid-row-gap: 40px;
 		flex-direction: column;
 		align-items: flex-start;
-		padding-top: 17px
+		padding-top: 17px!important;
 	}
 
 	.h-services-tags {
